--- a/meeting_client/app/src/main/res/layout/content_profile_details.xml
+++ b/meeting_client/app/src/main/res/layout/content_profile_details.xml
@@ -8,70 +8,83 @@
     tools:context=".ProfileDetails"
     tools:showIn="@layout/activity_profile_details">
 </android.support.constraint.ConstraintLayout>-->
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ProfileDetails"
-    tools:showIn="@layout/activity_profile_details"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:fillViewport="true">
 
-    <ImageView
-        android:id="@+id/profile_details_picture"
-        android:layout_width="158dp"
-        android:layout_height="158dp"
-        android:layout_gravity="center"
-        app:srcCompat="@mipmap/ic_launcher"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="86dp" />
-
-    <TextView
-        android:id="@+id/profile_details_first_name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:text="@string/first_name"
-        android:gravity="center" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".ProfileDetails"
+        tools:showIn="@layout/activity_profile_details"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <TextView
-        android:id="@+id/profile_details_last_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:text="@string/last_name"
-        android:gravity="center" />
+        <ImageView
+            android:id="@+id/profile_details_picture"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="70dp"
+            app:srcCompat="@mipmap/ic_launcher"
+            tools:layout_editor_absoluteX="28dp"
+            tools:layout_editor_absoluteY="86dp" />
 
-    <TextView
-        android:id="@+id/profile_details_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:text="@string/user_name"
-        android:gravity="center" />
+        <TextView
+            android:id="@+id/profile_details_first_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="@string/first_name"
+            android:textSize="20dp"
+            android:gravity="center" />
 
-    <TextView
-        android:id="@+id/profile_details_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:text="@string/email"
-        android:gravity="center" />
+        <TextView
+            android:id="@+id/profile_details_last_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="@string/last_name"
+            android:textSize="20dp"
+            android:gravity="center" />
 
-    <TextView
-        android:id="@+id/profile_details_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:text="@string/phone_number"
-        android:gravity="center" />
+        <TextView
+            android:id="@+id/profile_details_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="@string/user_name"
+            android:textSize="20dp"
+            android:gravity="center" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/profile_details_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="@string/email"
+            android:textSize="20dp"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/profile_details_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="@string/phone_number"
+            android:textSize="20dp"
+            android:gravity="center" />
+
+    </LinearLayout>
+
+</ScrollView>
