--- a/meeting_client/app/src/main/res/menu/menu_event_list_view.xml
+++ b/meeting_client/app/src/main/res/menu/menu_event_list_view.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/today"
         android:title="Today's Events" />
@@ -11,4 +14,11 @@
     <item
         android:id="@+id/this_month"
         android:title="This Month's Events" />
+
+    <item
+        android:id="@+id/show_declined_events"
+        android:title="Show Declined Events"
+        android:checkable="true"
+        android:checked="false"
+        app:actionViewClass="android.widget.CheckBox" />
 </menu>
