--- a/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
+++ b/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
@@ -36,7 +36,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
-        android:layout_width="233dp"
+        android:layout_width="255dp"
         android:layout_height="65dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
@@ -49,7 +49,7 @@
         <android.support.design.widget.TextInputEditText
             android:id="@+id/EmailInput"
             style="@style/Base.TextAppearance.AppCompat.Large"
-            android:layout_width="228dp"
+            android:layout_width="match_parent"
             android:layout_height="56dp"
             android:background="@android:drawable/dialog_holo_light_frame"
             android:hint="Enter an Email"
@@ -79,7 +79,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="28dp"
+        android:layout_marginBottom="8dp"
         android:text="Remove Checked People"
+        app:layout_constraintBottom_toTopOf="@+id/add_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
