--- a/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
+++ b/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="51dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
         android:text="Add"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +22,7 @@
     <ListView
         android:id="@+id/list_view_invited_people"
         android:layout_width="0dp"
-        android:layout_height="444dp"
+        android:layout_height="410dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
@@ -32,13 +32,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="255dp"
         android:layout_height="65dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="68dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,10 +79,10 @@
         android:layout_height="49dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
         android:text="Remove Checked People"
-        app:layout_constraintBottom_toTopOf="@+id/add_button"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
