--- a/meeting_client/app/src/main/res/menu/event_details.xml
+++ b/meeting_client/app/src/main/res/menu/event_details.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:title="Edit  Event" />
     <item android:id="@+id/delete_event_menu"
         android:title="@string/delete_event"
         app:showAsAction="never" />
@@ -9,5 +10,10 @@
     <item android:id="@+id/export_event"
         android:title="@string/export_event"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/notificationSwitch"
+        android:title="Get Notifications"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:checkable="true"/>
 
 </menu>
