--- a/meeting_client/app/src/main/res/menu/event_details.xml
+++ b/meeting_client/app/src/main/res/menu/event_details.xml
@@ -2,7 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:title="Edit  Event" />
+    <item
+        android:id="@+id/edit_Event"
+        android:title="Edit  Event" />
     <item android:id="@+id/delete_event_menu"
         android:title="@string/delete_event"
         app:showAsAction="never" />
