--- a/meeting_client/app/src/main/res/layout/content_registration.xml
+++ b/meeting_client/app/src/main/res/layout/content_registration.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
+
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -83,7 +85,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="phone_number (optional) e.g. +1 888-555-5555"
+                android:hint="@string/phone_number"
                 android:inputType="phone" />
 
         </android.support.design.widget.TextInputLayout>
