--- a/meeting_client/app/src/main/res/layout/content_registration.xml
+++ b/meeting_client/app/src/main/res/layout/content_registration.xml
@@ -85,7 +85,7 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/phone_number"
+                android:hint="@string/phone_number_opt"
                 android:inputType="phone" />
 
         </android.support.design.widget.TextInputLayout>
