--- a/meeting_client/app/src/main/res/layout/content_login.xml
+++ b/meeting_client/app/src/main/res/layout/content_login.xml
@@ -21,7 +21,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/email" />
+            android:hint="@string/user_name" />
 
     </android.support.design.widget.TextInputLayout>
 
