--- a/meeting_client/app/src/main/res/layout/activity_password_reset2.xml
+++ b/meeting_client/app/src/main/res/layout/activity_password_reset2.xml
@@ -44,8 +44,7 @@
                 android:id="@+id/uuid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="UUID"
-                android:inputType="numberPassword" />
+                android:hint="UID" />
         </android.support.design.widget.TextInputLayout>
 
         <Button
